--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-component": "^2.8.0"
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
